--- a/work.html
+++ b/work.html
@@ -29,7 +29,7 @@
       </h4>
       <ul role="list" class="work_logos flex flex_center">
         <li>
-          <img src="/assets/logo1.jpg" alt="Acme Corp" />
+          <img src="./assets/logo1.jpg" alt="Acme Corp" />
         </li>
         <li>
           <img src="/assets/logo1.jpg" alt="Acme Innovations" />
